cm_sec_mypod.yml
apiVersion: v1
kind: Pod
metadata:
  name: johnpod

spec:
  containers:
  #- name: web
  #  image: quay.io/redhattraining/hello-world-nginx:v1.0
  #  ports:
  #  - containerPort: 8080

  - name: database
    image: registry.redhat.io/rhel8/mysql-80:1
    ports:
    - containerPort: 3306
