allow-specific.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-specific
spec:
  podSelector:
    matchLabels:
      deployment: mys2i
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: test
        podSelector:
          matchLabels:
            deployment: test1
      ports:
      - port: 8080
        protocol: TCP
